Take home Ex 2 v1

--- a/_quarto.yml
+++ b/_quarto.yml
@@ -35,6 +35,7 @@ website:
     - title: "Take Home Exercises"
       contents:
         - Take-home-Exercise_1.qmd
+        - Take-home-Exercise_2.qmd
         # navigation items
         
   
