--- a/_quarto.yml
+++ b/_quarto.yml
@@ -36,6 +36,7 @@ website:
       contents:
         - Take-home-Exercise_1.qmd
         - Take-home-Exercise_2.qmd
+        - Take-home-Exercise_3.qmd
         # navigation items
         
   
